--- a/SMS.Web/Areas/Dashboard/Views/Users/Index.cshtml
+++ b/SMS.Web/Areas/Dashboard/Views/Users/Index.cshtml
@@ -5,16 +5,24 @@
 }
 
 <div class="content-wrapper">
-    @*<div class="row mb-1">
-        <div class="col col-lg-12">   
-            <h2>
-                Users
-                <span class="badge badge-info right">@Model.Pager.TotalItems</span>
-            </h2>
-            <hr />
-        </div>
-    </div>*@
-    <div class="content-header">
+    <section class="content-header">
+        <div class="container-fluid">
+            <div class="row mb-2">
+                <div class="col-sm-6">
+                    <h1 class="m-0 text-dark"> Users <span class="badge badge-info right">@Model.Pager.TotalItems</span></h1>
+                </div>
+                <div class="col-sm-6">
+                    <ol class="breadcrumb float-sm-right">
+                        <li class="breadcrumb-item"><a href="#">Home</a></li>
+                        <li class="breadcrumb-item active"> Users</li>
+                    </ol>
+                </div>
+            </div>
+        </div><!-- /.container-fluid -->
+    </section>
+
+
+    @*<div class="content-header">
         <div class="container-fluid">
             <div class="row mb-2">
                 <div class="col-sm-6">
@@ -28,7 +36,8 @@
                 </div><!-- /.col -->
             </div><!-- /.row -->
         </div><!-- /.container-fluid -->
-        </div>
+        </div>*@
+    <section class="content">
         <div class="row mb-3">
             <div class="col col-lg-12">
                 <form>
@@ -62,28 +71,39 @@
                 </form>
             </div>
         </div>
+    </section>
+    <section class="content">
         <div class="row">
-            <div class="col col-lg-12" id="listingArea">
-                @{Html.RenderPartial("_Listing", Model);}
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-header">
+                        <h3 class="card-title">User List</h3>
+                    </div>
+                    <div id="listingArea">
+                        @{Html.RenderPartial("_Listing", Model);}
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-    <!-- Modal -->
-    <div class="modal fade" id="accomodatioTypeForm" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
+    </section>
+</div>
 
-        </div>
-    </div>
+<!-- Modal -->
+<div class="modal fade" id="accomodatioTypeForm" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
 
-    <script>
-        $(".data-btn").click(function () {
-            $.ajax({
-                url: $(this).attr('data-href'),
-                type: "GET"
-            }).done(function (response) {
-                $("#accomodatioTypeForm .modal-dialog").html(response);
-                //$('#accomodatioTypeForm').modal('toggle');
-                //$("#contentArea").html(response);
-            });
+    </div>
+</div>
+
+<script>
+    $(".data-btn").click(function () {
+        $.ajax({
+            url: $(this).attr('data-href'),
+            type: "GET"
+        }).done(function (response) {
+            $("#accomodatioTypeForm .modal-dialog").html(response);
+            //$('#accomodatioTypeForm').modal('toggle');
+            //$("#contentArea").html(response);
         });
-    </script>
+    });
+</script>
