--- a/SMS.Web/Areas/Dashboard/Views/Roles/_Listing.cshtml
+++ b/SMS.Web/Areas/Dashboard/Views/Roles/_Listing.cshtml
@@ -2,7 +2,7 @@
 
 @if (Model != null && Model.Roles != null && Model.Roles.Count() > 0)
 {
-    <table class="table table-striped">
+    <table class="table table-bordered table-striped">
         <thead>
             <tr>
 
@@ -30,8 +30,8 @@
                     </td>
 
                     <td>
-                        <button data-href="@Url.Action("Action", "Roles",new {ID=role.Id })" data-toggle="modal" data-target="#accomodatioTypeForm" type="button" class="data-btn btn btn-primary btn-sm"><i class="fas fa-edit mr-1"></i>Edit</button>
-                        <button data-href="@Url.Action("Delete", "Roles",new {ID=role.Id })" data-toggle="modal" data-target="#accomodatioTypeForm" type="button" class="data-btn btn btn-danger btn-sm"><i class="fas fa-trash mr-1"></i>Delete</button>
+                        <button data-href="@Url.Action("Action", "Roles",new {ID=role.Id })" data-toggle="modal" data-target="#accomodatioTypeForm" type="button" class="data-btn btn btn-outline-primary btn-sm"><i class="fas fa-edit mr-1"></i>Edit</button>
+                        <button data-href="@Url.Action("Delete", "Roles",new {ID=role.Id })" data-toggle="modal" data-target="#accomodatioTypeForm" type="button" class="data-btn btn btn-outline-danger btn-sm"><i class="fas fa-trash mr-1"></i>Delete</button>
                     </td>
                 </tr>
             }
