--- a/SMS.Web/Areas/Dashboard/Views/Users/_Listing.cshtml
+++ b/SMS.Web/Areas/Dashboard/Views/Users/_Listing.cshtml
@@ -2,7 +2,7 @@
 
 @if (Model != null && Model.Users != null && Model.Users.Count() > 0)
 {
-    <table class="table table-striped">
+    <table class="table table-bordered table-striped">
         <thead>
             <tr>
                 <th scope="col">Name</th>
@@ -17,7 +17,7 @@
             {
                 <tr>
                     <td>
-                        @user.FirstName
+                        @user.FirstName @user.LastName
                     </td>
                     <td>
                         @user.Email
