--- a/SMS.Web/Areas/Dashboard/Views/Shared/_Layout.cshtml
+++ b/SMS.Web/Areas/Dashboard/Views/Shared/_Layout.cshtml
@@ -16,7 +16,9 @@
    
     <!-- Ionicons -->
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+    <link rel="icon" href="~/favicon.ico" />
     <!--Datatable-->
+    
     <!-- Tempusdominus Bbootstrap 4 -->
     <link href="~/Areas/Dashboard/Content/plugins/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
     <link href="~/Areas/Dashboard/Content/plugins/css/responsive.bootstrap4.min.css" rel="stylesheet" />
@@ -46,7 +48,7 @@
     <script src="~/Scripts/mylocations.filler.js"></script>
 </head>
 
-<body class="hold-transition sidebar-mini layout-fixed">
+<body class="sidebar-mini layout-fixed text-sm" style="height: auto;">
     <div class="wrapper">
 
         <!-- Navbar -->
