--- a/SMS.Web/Areas/Dashboard/Views/Shared/_Header.cshtml
+++ b/SMS.Web/Areas/Dashboard/Views/Shared/_Header.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.AspNet.Identity
 @using SMS.Entities
 @using SMS.Data
-<nav class="main-header navbar navbar-expand navbar-white navbar-light">
+<nav class="main-header navbar navbar-expand navbar-dark navbar-info">
     <!-- Left navbar links -->
     <ul class="navbar-nav">
         <li class="nav-item">
