--- a/SMS.Web/Areas/Dashboard/Views/Shared/_Sidebar.cshtml
+++ b/SMS.Web/Areas/Dashboard/Views/Shared/_Sidebar.cshtml
@@ -3,8 +3,8 @@
 @using SMS.Data
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
-    <a href="@Url.Action("Index","Dashboard")" class="brand-link">
-        <img src="/Areas/Dashboard/Content/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
+    <a href="@Url.Action("Index","Dashboard")" class="brand-link navbar-info">
+        <img src="~/Areas/Dashboard/Content/img/siteLogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
              style="opacity: .8">
         <span class="brand-text font-weight-light">SMS</span>
     </a>
